Fix rocket image on small screens

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -103,7 +103,7 @@ body {
   }
 
   .rocket {
-    left: -190px;
+    left: -170px;
   }
 
   .intro-container {
